Fix bug where sa fields would be cut off

--- a/ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
+++ b/ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
@@ -358,7 +358,7 @@ body.modal-open[style] {
     height: 100%;
 }
 .dynamic-part {
-    height:100%;
+    min-height:100%;
     overflow: hidden;
 }
 .sub-menu {
